2003-06-14  Per Bothner  <per@bothner.com>

	* Makefile.am (JAVADOC_PACKAGES):  Add gnu.kawa.sax, gnu.jemacs.swing.

	* kawa/lang/Eval.java (apply):  Use CallContext's getNextArg
	method rather than getArgAsObject, which will be deprecated. 

2003-06-06  Jim White  <jim@pagesmiths.com>

	* build.xml:  Add gnu/ecmascript.  Add gnu/jemacs/swing.
	Name change to XStrings.scm.
	Check for Servlet 2.3 API for enable-servlet (HttpServletResponse
	.resetBuffer and HttpServletRequest.getRequestURL are only since 2.3).
	Init of tmp directory moved so that clean will work ok. 

	* build.xml:  Make system.scm get compiled after vectors.scm.
	
2003-06-03  Per Bothner  <per@bothner.com>

	* Makefile.am (distall):  Add more stuff.

	* kawa/standard/IfFeature.java (scanForDefinitions):  Call scan_form
	on single form.  Fixes bug reported by Sven.Hartrumpf@FernUni-Hagen.de.

2003-06-01  Per Bothner  <per@bothner.com>

	* configure.in:  Set version to 1.7.
	* build.xml (version.release):  Set to 1.7.

	* kawa/standard/IfFeature.java (scanForDefinitions):  New method.

	* Makefile.am (dist-kawa-@VERSION@.jar):  Add --with-sax2 to configure.

2003-06-01  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (initScheme):  Specify field name for
	vector-append.  Fixes bug reported by Sven.Hartrumpf@FernUni-Hagen.de.

2003-05-31  Per Bothner  <per@bothner.com>

	* kawa/standard/load.java (loadSource):  Don't call BaseUri.resolve
	if name is absolute.

2003-05-31  Vladimir Tsichevski  <wowa@jet.msk.su>

	* configure.in: Fix documentation typo AWT -> SAX2.

2003-05-31  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (initScheme):  Use define_field instead of
	define_proc for define-procedure builtins for partial inlining.

2003-05-22  Per Bothner  <per@bothner.com>

	* kawa/lang/EqualPat.java (match):  Generalize 2003-04-21 fix
	to handle arbitrary String/Symbol pairs.  Fixes bugs reported
	05-19 by Sven Hartrumpf and 05-22 by Bruce Lewis.
