@@ -1,3 +1,8 @@
+2003-07-12  Chris Dean  <Chris.Dean@sokitomi.com>
+
+	* kawa/standard/syntax_rules.java (rewriteForm):  Allow Keywords among
+	the literals
+
 2003-06-14  Per Bothner  <per@bothner.com>
 
 	* Makefile.am (JAVADOC_PACKAGES):  Add gnu.kawa.sax, gnu.jemacs.swing.
